feat: tphere, tpoff